--- a/quickstart/pom.xml
+++ b/quickstart/pom.xml
@@ -9,7 +9,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>quickstart</name>
-  <!-- FIXME change it to the project's website -->
+  <!-- FIXME change it to the project's website can you see me -->
   <url>http://www.example.com</url>
 
   <properties>
