--- a/quickstart/pom.xml
+++ b/quickstart/pom.xml
@@ -9,8 +9,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>quickstart</name>
-  <!-- FIXME change it to the project's website can you see me ewe-->
-  <!-- FIXME change it to the project's website can you see me again! -->
+  <!-- FIXME change it to the project's website can you see me ewexx -->
   <url>http://www.example.com</url>
 
   <properties>
